# travel-agent-skills

./: .coverage  .gitignore  README.md  pyproject.toml  registry.yaml
.claude/: settings.local.json
.github/workflows/: eval.yml
docs/: architecture.excalidraw  architecture.md  disruption-architecture-note.md  platform-spec.md  skill-standards.md
releases/disruption-handling/0.1.0/: release.yaml
releases/disruption-skills/0.1.0/: release.yaml
releases/flight-search/0.1.0/: release.yaml
skills/ancillery-skill/: SKILL.md
skills/booking-skill/: SKILL.md
skills/disruption-handling/: SKILL.md
skills/disruption-skill/car-disruption-detection/: SKILL.md
skills/disruption-skill/disruption-agent-common-policy/: SKILL.md
skills/disruption-skill/experience-disruption-detection/: SKILL.md
skills/disruption-skill/external-disruption-detection/: SKILL.md
skills/disruption-skill/flight-delay-detection/: SKILL.md
skills/disruption-skill/flight-disruption-detection/: SKILL.md
skills/disruption-skill/flight-risk-detection/: SKILL.md
skills/disruption-skill/gate-terminal-change/: SKILL.md
skills/fare-rules/: SKILL.md
skills/flight-search/: SKILL.md
skills/hotel-search/: SKILL.md
skills/modify-booking/: SKILL.md
skills/planning-skill/: SKILL.md
src/travel_agent_skills/: __init__.py  cli.py  packaging.py  registry.py  standards.py  validation.py
templates/basic-skill/: SKILL.md.j2
tests/: test_cli.py  test_delete_cmd.py  test_generate_cmd.py  test_inspect_cmd.py  test_packaging.py  test_registry.py  test_validate_cmd.py  test_validation.py
(+17 files in other folders)
