[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-agent-skills"
version = "0.1.0"
description = "CLI and registry tooling for shared travel agent skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "openai>=1.30",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "skills-ref>=0.1.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
skills = "travel_agent_skills.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

